# Crucible

./: .gitignore  GenerateSolution.bat  README.md
Resources/Font/: Cubic11.fnt  LucidaSans.fnt
Resources/Models/: can.fbx
Resources/Shaders/: Common.hlsl  GBuffer.hlsl  NoLit.hlsl  Shared.hlsl  UI.hlsl
Resources/Textures/: SampleTex.psd  icon.psd
SourceCode/: CMakeLists.txt  launchSettings.json
SourceCode/Crucible/: CMakeLists.txt  Program.cs
SourceCode/Crucible/Core/: AppConstants.cs  Buffer.cs  DescriptorHeap.cs  EngineCore.cs  EngineInit.cs  FrameResource.cs  Helper.cs  Illumination.cs  Input.cs  Mesh.cs  Physics.cs  PipelineState.cs  RenderItem.cs  Serialization.cs  Texture.cs
SourceCode/Crucible/UI/: BitFont.cs  UIManager.cs
SourceCode/SharpD12/: CMakeLists.txt  Program.cs
SourceCode/SharpD12/Core/: AppConstants.cs  Buffer.cs  DescriptorHeap.cs  EngineCore.cs  EngineInit.cs  Engine_Core.cs  Engine_Initial.cs  Engine_Input.cs  Engine_Misc.cs  FrameResource.cs  Helper.cs  Input.cs  Mesh.cs  PSO.cs  PipelineState.cs  ProgramDefinedConstants.cs  RenderItem.cs  StaticMesh.cs  Texture.cs
SourceCode/SharpD12/UI/: BitFont.cs  UIManager.cs
